# bumper

./: .gitignore  AGENTS.md  Cargo.toml  README.md  action.sh  action.yaml  bumper.sh  flake.nix  main.rs  rust-toolchain.toml  treefmt.toml
.forgejo/: renovate.json
.forgejo/workflows/: bump.yaml  release.yaml  vulnerable.yaml
.github/: README.md  renovate.json
.github/workflows/: bump.yaml  check.yaml  release.yaml  update.yaml  vulnerable.yaml
src/: bump.rs  bump.sh  bumper.sh  colors.sh  config.rs  git.sh  git_ops.rs  main.rs  model.rs  nix.sh  util.sh  versioning.rs
tests/: cases.rs
tests/gleam/: gleam.toml
tests/gradle/: build.gradle  build.gradle.kts  gradle.properties
tests/nix/: flake.nix
tests/node/: package-lock.json  package.json
tests/python/: pyproject.toml
tests/rust/: Cargo.toml
tests/zig/: build.zig.zon
util/: git-user.sh  nix.sh  run.sh
