[package]
name = "bumper"
version = "0.16.0"
edition = "2024"
rust-version = "1.94.1"
description = "Git semantic version bumper"
readme = "README.md"
repository = "https://github.com/spotdemo4/bumper"
license-file = "LICENSE"

[[bin]]
name = "bumper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.20.4"
regex = "1"
toml_edit = "0.25"
