[package]
name = "bumper"
version = "0.18.0"
edition = "2024"
rust-version = "1.95.0"
description = "Git semantic version bumper"
readme = "README.md"
repository = "https://trev.zip/llc/bumper"
license-file = "LICENSE"

[[bin]]
name = "bumper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = { version = "0.21.0", features = ["https", "ssh"] }
regex = "1"
toml_edit = "0.25"
